1998-10-16  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* month-view.c: Changed a lot of stuff not to use the layout code
	-- the month view's days are too small to display layout
	usefully.  Now they display a little list of the events in each
	day.  We also have a popup menu for the days in the month view.

	* calendar.c (calendar_get_objects_in_range): Reverse the list so
	that it is returned in increasing order.

	* eventedit.c (event_editor_new_whole_day): New public function to
	create an event for the complete span of day_begin to day_end.

	* year-view.c (new_appointment): Use event_editor_new_whole_day().

	* year-view.c (yv_popup_menu): Mark strings for i18n.

1998-10-12  Ji Lee <g@ucsd.edu>

	* eventedit.c (ee_store_recur_rule_to_ical): The interval was
	never being loaded from the spin button.

1998-10-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* month-view.c (month_view_update): Create a list of children and
	lay them out nicely.  Lots of functions added for this purpose.
	(adjust_segment): Main event segment adjustment routine.
	(adjust_children): Adjusts all the children in the month view.
	(child_create_segments): Creates the segments for a particular event.
	(layout_children): Uses the generic layout engine to organize the children.

1998-10-08  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gncal-todo.c (clist_row_selected): Set the sensitivity of the
	edit/delete buttons.
	(gncal_todo_update): Likewise.  Thanks to Dirk Luetjens for the
	bug report.

	* layout.c: Do some cleanup; now we pass a struct with the layout
	algorithm's state instead of passing a trillion parameters around.

	* gncal-full-day.c (layout_children): Use the new generic layout
	engine.
	(child_compare): Sort keys are start time then end time, not just
	start time.  This produces somewhat nicer results for the layout
	algorithm.

	The new layout code uses a partition of the time range occupied by